# Data_Science_Labs

./: .gitignore  README.md
lab_02/: .gitignore  Part1.ipynb  Part2.ipynb  README.md  requirements.txt
lab_02/.ipynb_checkpoints/: Part1-checkpoint.ipynb
lab_02/vhi_data/: vhi_id_10_2026-03-18_13-43-41.csv  vhi_id_11_2026-03-18_13-43-42.csv  vhi_id_12_2026-03-18_13-43-43.csv  vhi_id_13_2026-03-18_13-43-44.csv  vhi_id_14_2026-03-18_13-43-45.csv  vhi_id_15_2026-03-18_13-43-46.csv  vhi_id_16_2026-03-18_13-43-47.csv  vhi_id_17_2026-03-18_13-43-48.csv  vhi_id_18_2026-03-18_13-43-49.csv  vhi_id_19_2026-03-18_13-43-50.csv  vhi_id_1_2026-03-18_13-43-31.csv  vhi_id_20_2026-03-18_13-43-51.csv  vhi_id_21_2026-03-18_13-43-52.csv  vhi_id_22_2026-03-18_13-43-53.csv  vhi_id_23_2026-03-18_13-43-54.csv  vhi_id_24_2026-03-18_13-43-55.csv  vhi_id_25_2026-03-18_13-43-56.csv  vhi_id_26_2026-03-18_13-43-57.csv  vhi_id_27_2026-03-18_13-43-58.csv  vhi_id_2_2026-03-18_13-43-32.csv  vhi_id_3_2026-03-18_13-43-34.csv  vhi_id_4_2026-03-18_13-43-35.csv  vhi_id_5_2026-03-18_13-43-36.csv  vhi_id_6_2026-03-18_13-43-37.csv  vhi_id_7_2026-03-18_13-43-38.csv  (+2 more)
lab_03/: README.md  lab3_visualization.ipynb
lab_04/: README.md  lab4_harmonics.py
lab_05/: .gitignore  README.md  lab5_app.py
lab_06/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab_07/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab_07/include/: FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab_07/src/: CameraProvider.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
(+5 files in other folders)
